# myLBM

./: .gitignore  LB.sln  LBConverter.ods  README_COMPILATION.txt  eigen_test.cpp  notki.txt  test_boost.cpp
Debug/: LB.ilk
LB/: .gitignore  CMakeLists.txt  ClassDiagram.cd  ClassDiagram1.cd  DConstantsTest.cpp  DConstantsTest.h  DefaultCase.xml  Enums.h  KarmanCase.xml  LB.vcxproj  LB.vcxproj.filters  LidDrivenCavity.xml  MAIN.cpp  MeshBuilder.h  PressureOutlet.cpp  PressureOutlet.h  VelocityInlet.cpp  VelocityInlet.h  WallForceWalidatorCase.xml  Writer.cpp  Writer.h
LB/CODE/Cases/: Case.h  ChannelCaseBuilder.h  LidCaseBuilder.h
LB/CODE/Constants/: D2Q5Constants.h  D2Q9Constants.h  DdQqConstants.h  Singleton.cpp  Singleton.h
LB/CODE/IO/: VTKWriter.cpp  VTKWriter.h  Writer.cpp  Writer.h  XMLParser.cpp  XMLParser.h
LB/CODE/Mesher/: AdvectionValidatorMeshBuilder.cpp  AdvectionValidatorMeshBuilder.h  ChannelMeshBuider.h  ChannelMeshBuilder.cpp  DiffusionValidatorMeshBuilder.cpp  DiffusionValidatorMeshBuilder.h  LidMeshBuilder.h  LidMeshBuilder.h.cpp  MeshBuilder.cpp  MeshBuilder.h  MeshDirector.cpp  MeshDirector.h  WallForceValidatorMeshBuilder.cpp  WallForceValidatorMeshBuilder.h
LB/CODE/Nodes/: MovingWall.cpp  MovingWall.h  Node.cpp  Node.h  PeriodicNode.h  PressureOutlet.cpp  PressureOutlet.h  SymmetryNode.h  VelocityInlet.cpp  VelocityInlet.h  Wall.cpp  Wall.h
LB/CODE/Solver/: Solver.cpp  Solver.h
LB/Debug/: solver.obj.enc  vc140.idb
LB/Debug/LB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LB.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LB/cpp/: AdvectionValidatorMeshBuilder.cpp  CaseBuilder.cpp  ChannelMeshBuilder.cpp  D2Q9Constants.cpp  DdQqConstants.cpp  DiffusionValidatorMeshBuilder.cpp  MeshBuilder.cpp  MeshDirector.cpp  Mesher.cpp  MovingWall.cpp  Node.cpp  PressureOutlet.cpp  Singleton.cpp  Solver.cpp  VelocityInlet.cpp  Wall.cpp  WallForceValidatorMeshBuilder.cpp  Writer.cpp
LB/headers/: AdvectionValidatorMeshBuilder.h  Case.h  CaseBuilder.h  CaseDirector.h  ChannelCaseBuilder.h  ChannelMeshBuider.h  D2Q5Constants.h  D2Q9Constants.h  DdQqConstants.h  DiffusionValidatorMeshBuilder.h  Enums.h  LidCaseBuilder.h  LidMeshBuilder.h  MeshBuilder.h  MeshDirector.h  Mesher.h  MovingWall.h  Node.h  PeriodicNode.cpp  PeriodicNode.h  PressureOutlet.h  Singleton.h  Solver.h  VelocityInlet.h  Wall.h  WallForceValidatorMeshBuilder.h  Writer.h
LB/sample_cases/: LidDrivenCavity.xml
Release/: LB.iobj  LB.ipdb
matlab/: FFT_PointData.m  Gauss.m  HeatAdvection.m  HeatDiffusion.m  Untitled.m  WallForceValidator.m  fft_Karman.m  fft_cw2.m
matlab/Armata/: Celowanie1step.m  VPstep.m  VPstep_AD.m  Wykresy.m  initializer.m  main.m  mainAdjoint.m  oneStepAcceleration.m  oneStepPosition.m  oneStepVelocity.m
matlab/Armata/ADRozgrzewka2/: ADrozgrzewka.m  f_3in_1out.m  f_3in_2out.m
matlab/Armata/RK4_cpp_armata/RK4_armata/: Source.cpp
matlab/acf/: acf.m
